# truewise

./: .fuse_hidden000000120000000b  .fuse_hidden0000110b0000000c  .fuse_hidden000011230000001b  .fuse_hidden00001da500000c8e  .fuse_hidden00001da700000c8f  .fuse_hidden00001da900000c90  .fuse_hidden00001daf00000c92  .gitattributes  .gitignore  .pre-commit-config.yaml  DATA_SOURCES.md  HANDOFF.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  truewise-design-improvement-plan.md  wrangler.jsonc
.github/workflows/: ci.yml  deploy.yml  fvt-monitor.yml
analysis/: summary.py  validate.py
docs/: .fuse_hidden000002fc00000019  .fuse_hidden0000111900000016  .fuse_hidden000011210000001a  AUDIT.md  BRIEF.md  DATA_DICTIONARY.md  GO_PUBLIC.md  IMPACT_LOG.md  METHODOLOGY.md
pipeline/: .fuse_hidden0000001000000009  .fuse_hidden000000110000000a  .fuse_hidden0000026c00000001  .fuse_hidden0000028000000004  .fuse_hidden0000110500000007  README.md  build_careers.py  build_careers_demand.py  build_k12.py  build_k12_source.py  build_package_data.py  build_site.py  build_spine.py  config.py  download.py  download_bls.py  load_scorecard.py  monitor_diff.py  value_check.py
published/: careers_demand.parquet  institutions.parquet  k12.parquet  value_check.parquet
site/: 404.html  index.html  robots.txt  sitemap.xml  styles.css
site/about/: index.html
tests/: .fuse_hidden0000002400000012  .fuse_hidden0000002500000013  test_careers.py  test_integration.py  test_k12.py  test_site_copy.py  test_smoke.py  test_validate_and_diff.py  test_value_check.py
(+73 files in other folders)
