[project]
name = "truewise"
version = "0.0.0"
description = "Open US federal education data, cleaned into clear, honest guidance for students and families."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Anand Raj" }]

# Runtime deps are pinned in requirements.txt for the pipeline.
# The published Python package (truewise-data) gets its own packaging later (Iteration 4).

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["data", "archive", "site"]

[tool.ruff.lint]
# A pragmatic default set: pyflakes, pycodestyle, isort, bugbear, comprehensions, pyupgrade.
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]  # line length handled by the formatter, not the linter

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
